# hive

./: .dockerignore  .env.dev.example  .env.prod.example  .gitignore  Cargo.toml  Dockerfile.api  README.md  compose.yaml  main.py  pyproject.toml  restart_db.sh
.github/workflows/: ci.yml
crates/hive_api/: Cargo.toml
crates/hive_api/queries/games/: action_metadata_for_game.sql  find_game_by_id.sql  find_game_by_id_for_update.sql  find_game_by_invite.sql  find_waiting_game_by_invite.sql  insert_action.sql  insert_solo_game.sql  insert_waiting_game.sql  join_waiting_game.sql  list_actions_for_game.sql  list_user_games.sql  update_game_status.sql
crates/hive_api/queries/users/: authenticate_session.sql  find_user_by_email.sql  insert_session.sql  insert_user.sql  revoke_session.sql  update_user_last_login.sql
crates/hive_api/src/: auth.rs  error.rs  games.rs  lib.rs  main.rs  queries.rs  state.rs
crates/hive_api/tests/: auth.rs  games.rs
crates/hive_cli/: Cargo.toml
crates/hive_cli/src/: cli.rs  main.rs
crates/hive_engine/: Cargo.toml
crates/hive_engine/examples/: rebuild_vs_cache.rs
crates/hive_engine/src/: lib.rs
crates/hive_engine/src/hive/: error.rs  game.rs  history.rs  inventory.rs  mod.rs
crates/hive_visualize/: Cargo.toml
crates/hive_visualize/src/: lib.rs
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.svelte  app.css  app.html
frontend/src/lib/: api.svelte.ts  board-geometry.ts  hive-ui.ts  move-sound.ts  session.svelte.ts
frontend/src/lib/components/: Topbar.svelte
frontend/src/lib/pages/: AuthPage.svelte  DashboardPage.svelte  GamePage.svelte  LandingPage.svelte
frontend/src/lib/play/: GameSidebar.svelte  (+3 more)
frontend/src/routes/: +page.svelte
hive/: engine.py  visualize.py
migrations/: 20260524000000_schema.sql  20260524010000_add_waiting_game_status.sql
nginx/templates/: hive.conf.template
rust_impl/src/: main.rs
src/: cli.rs  lib.rs  main.rs  visualize.rs
src/hive/: error.rs  game.rs  history.rs  inventory.rs  mod.rs  position.rs  types.rs
src/hive/board/: mod.rs  piece.rs
(+7 files in other folders)
