[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hive"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "matplotlib>=3.9.0",
    "pydantic>=2.13.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hive*"]
