[package]
name = "hive_api"
version.workspace = true
edition.workspace = true
description = "HTTP API for Hive games"
publish = false

[lib]
name = "hive_api"
path = "src/lib.rs"

[[bin]]
name = "hive-api"
path = "src/main.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.4"
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
hive_engine = { path = "../hive_engine" }
rand = "0.8.5"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "ipnetwork", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.17.0", features = ["serde"] }

[dev-dependencies]
http-body-util = "0.1"
serde_json = "1"
sqlx = { version = "0.8.6", features = ["chrono", "ipnetwork", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tower = { version = "0.5", features = ["util"] }
