[package]
name = "hive_cli"
version.workspace = true
edition.workspace = true
description = "Interactive CLI for local Hive play-testing"
publish = false

[[bin]]
name = "hive"
path = "src/main.rs"

[dependencies]
hive_engine = { path = "../hive_engine" }
hive_visualize = { path = "../hive_visualize" }
